<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp" 
        android:background="@color/weightGray"
        android:orientation="horizontal">
		  <Button
		  android:id="@+id/backbutton"
		  android:background="@drawable/btn_back"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:layout_margin="8dp"
		  ></Button>		  

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="8dp"
            android:text="@string/scanTagTitle"
            android:textColor="@color/white" />

        <!-- <Spinner   
        android:id="@+id/savemenu"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp" 
        android:layout_marginTop="5dp"
        android:drawSelectorOnTop = "true"/>    -->   
        <TextView
            android:id="@+id/title"
            android:text="@string/str_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="8dp"
            android:textSize="@dimen/size_title" 
            android:textColor="@android:color/white"/>

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dip"
            android:background="@drawable/icon_arrow_down"
       />   
    </LinearLayout>  
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp" 
        android:background="@color/weightGray"
        android:orientation="horizontal"
        android:layout_marginTop="1dp"
        >
        <ImageView 
           android:id="@+id/userlogo"
            android:layout_width="20dp"
            android:layout_height="20dp" 
            android:src="@drawable/user"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="" 
            android:textColor="@color/white"
            android:textSize="15dp"
            />
        <TextView
            android:id="@+id/tbname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" 
            android:textColor="@color/white"
            android:textSize="15dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:id="@+id/devnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp" />
        
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.28" 
        android:orientation="horizontal">
         <ExpandableListView
        android:id="@+id/inspectItem"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="@null"
        android:childDivider="@drawable/child_bg"
        android:childIndicatorLeft="0dp"
        android:divider="@color/Grey"
        android:dividerHeight="1dp"
        android:groupIndicator="@null"
        android:scrollbarAlwaysDrawHorizontalTrack="true">
    </ExpandableListView>    
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/showalert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/inspectResultPane"
        android:layout_width="match_parent"
        android:layout_height="40dp" 
        android:orientation="horizontal"
        android:background="@color/weightGray"
        android:visibility="gone"
        >
        <RadioGroup 
           android:id="@+id/insepctResult"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"  
        >
        <RadioButton 
            android:id="@+id/normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal"
            />
           <RadioButton 
            android:id="@+id/abnormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abnormal"
            />
           <RadioButton 
            android:id="@+id/nothing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nothing"
            />   
        </RadioGroup>
        <EditText
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp" 
            android:text="@string/beizhu"
            />
</LinearLayout>
    <Button
        android:id="@+id/scanTag"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/scanTag" />
</LinearLayout>